# ball-simulator

./: .gitignore  README.md  main.py  pyproject.toml
python/: README.md  main.py  pyproject.toml
python/ballsimulator/: game.py
python/okgoogle/: recognizer.py
rust/ball_simulator/: Cargo.toml
